# gcx-experiments

./: .gitignore  .gitmodules  Readme.md  measure_compression.sh  merge-csv-reports.sh  prepare_external_tools.sh  utils.sh
external-overrides/bzip2/: CMakeLists.txt  bzip2.c
external-overrides/gcis/: build-mac.sh  build.sh
external-overrides/glza/: GLZAcompress.c
external-overrides/sdsl/: install.sh
external-overrides/shapedslsp/: CMakeLists.txt  ExtractBenchmark.cpp
external-overrides/sux/: RecSplit.hpp  common.hpp
report/2025-04-01-mac/: Readme.md  artificial-fib41-gcx-encoding.csv  artificial-rs.13-gcx-encoding.csv  artificial-tm29-gcx-encoding.csv  code-sources-gcx-encoding.csv  corpus-dickens-gcx-encoding.csv  corpus-etext99-gcx-encoding.csv  corpus-howto-gcx-encoding.csv  corpus-nci-gcx-encoding.csv  corpus-rctail96-gcx-encoding.csv  corpus-sprot34.dat-gcx-encoding.csv  corpus-webster-gcx-encoding.csv  dna-dna-gcx-encoding.csv  pseudo-real-dblp.xml.00001.1-gcx-encoding.csv  pseudo-real-dblp.xml.00001.2-gcx-encoding.csv  pseudo-real-dblp.xml.0001.1-gcx-encoding.csv  pseudo-real-dblp.xml.0001.2-gcx-encoding.csv  pseudo-real-dna.001.1-gcx-encoding.csv  pseudo-real-english.001.2-gcx-encoding.csv  pseudo-real-proteins.001.1-gcx-encoding.csv  pseudo-real-sources.001.2-gcx-encoding.csv  real-Escherichia_Coli-gcx-encoding.csv  real-cere-gcx-encoding.csv  real-coreutils-gcx-encoding.csv  real-einstein.de.txt-gcx-encoding.csv  real-einstein.en.txt-gcx-encoding.csv  real-influenza-gcx-encoding.csv  real-kernel-gcx-encoding.csv  real-para-gcx-encoding.csv  real-world_leaders-gcx-encoding.csv  xml-dblp.xml-gcx-encoding.csv
report/2025-04-09-mac/: artificial-fib41-gcx-encoding.csv  artificial-fib41-gcx-extract.csv  artificial-fib41-gcx-grammar.csv  artificial-rs.13-gcx-encoding.csv  artificial-rs.13-gcx-extract.csv  artificial-rs.13-gcx-grammar.csv  artificial-tm29-gcx-encoding.csv  artificial-tm29-gcx-extract.csv  artificial-tm29-gcx-grammar.csv  pseudo-real-dblp.xml.00001.1-gcx-encoding.csv  pseudo-real-dblp.xml.00001.1-gcx-extract.csv  pseudo-real-dblp.xml.00001.1-gcx-grammar.csv  pseudo-real-dblp.xml.00001.2-gcx-encoding.csv  pseudo-real-dblp.xml.00001.2-gcx-extract.csv  pseudo-real-dblp.xml.00001.2-gcx-grammar.csv  pseudo-real-dblp.xml.0001.1-gcx-encoding.csv  pseudo-real-dblp.xml.0001.1-gcx-extract.csv  pseudo-real-dblp.xml.0001.1-gcx-grammar.csv  pseudo-real-dblp.xml.0001.2-gcx-encoding.csv  pseudo-real-dblp.xml.0001.2-gcx-extract.csv  pseudo-real-dblp.xml.0001.2-gcx-grammar.csv  pseudo-real-dna.001.1-gcx-encoding.csv  pseudo-real-dna.001.1-gcx-extract.csv  pseudo-real-dna.001.1-gcx-grammar.csv  real-cere-gcx-extract.csv  (+35 more)
scripts/: add_compressed_size_to_grammar_info.py  algo_stats_generator.py  extract.py  merge_datasets.py  pivot_levels_by_algorithm.py  requirements.txt
(+492 files in other folders)
